empty 및 스타일 수정

--- a/curriculum02.html
+++ b/curriculum02.html
@@ -74,11 +74,31 @@
             </div>
           </div>
 
+
+
+
+
           <!--전체 : data-view="1"-->
           <div class="view view01">
             <p class="v-tit">디노베이션</p>
 
-            <ul>
+
+
+
+            <!--05.27추가-->
+            <!--개설과목 없을 경우 empty-->
+            <div class="empty">
+              <p class="empty-txt">등록된 과목이 없습니다.</p>
+            </div>
+            <!--05.27추가-->
+
+
+
+
+
+
+
+            <ul style="display: none">
               <li>
                 <p class="tit">바이오헬스 진로설계</p>
                 <div class="info">
@@ -188,7 +208,7 @@
                 <a href="curriculum02Detail.html" class="btn detail">자세히 보기</a>
               </li>
             </ul>
-            <a class="btn more">더보기</a>
+            <a class="btn more" style="display: none;">더보기</a>
           </div>
 
           <!--디자인 : data-view="2"-->
