--- a/outCome02.html
+++ b/outCome02.html
@@ -76,56 +76,68 @@
             </div>
           </div>
 
-          <ul class="cnt-list">
-            <li class="list-head web">
-              <p>제목</p>
-              <p>등록일</p>
-            </li>
-            <li>
-              <div class="noti-tit">
-                <p class="tit">웨어러블 캡스톤디자인</p>
-              </div>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <a href="detailPage.html" class="btn">상세보기</a>
-            </li>
-            <li>
-              <div class="noti-tit">
-                <p class="tit">웨어러블 캡스톤디자인</p>
-              </div>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <a href="detailPage.html" class="btn">상세보기</a>
-            </li>
-            <li>
-              <div class="noti-tit">
-                <p class="tit">웨어러블 캡스톤디자인</p>
-              </div>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <a href="detailPage.html" class="btn">상세보기</a>
-            </li>
-            <li>
-              <div class="noti-tit">
-                <p class="tit">웨어러블 캡스톤디자인</p>
-              </div>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <a href="detailPage.html" class="btn">상세보기</a>
-            </li>
-            <li>
-              <div class="noti-tit">
-                <p class="tit">웨어러블 캡스톤디자인</p>
-              </div>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <a href="detailPage.html" class="btn">상세보기</a>
-            </li>
-            <li>
-              <div class="noti-tit">
-                <p class="tit">웨어러블 캡스톤디자인</p>
-              </div>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <a href="detailPage.html" class="btn">상세보기</a>
-            </li>
-          </ul>
 
-          <div class="paging-wrap">
+          <!--05.27추가-->
+          <div class="cnt-list-wrap">
+            <!--개설과목 없을 경우 empty-->
+            <div class="empty">
+              <p class="empty-txt">검색결과가 없습니다.</p>
+            </div>
+
+
+
+
+            <ul class="cnt-list" style="display: none">
+              <li class="list-head web">
+                <p>제목</p>
+                <p>등록일</p>
+              </li>
+              <li>
+                <div class="noti-tit">
+                  <p class="tit">웨어러블 캡스톤디자인</p>
+                </div>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <a href="detailPage.html" class="btn">상세보기</a>
+              </li>
+              <li>
+                <div class="noti-tit">
+                  <p class="tit">웨어러블 캡스톤디자인</p>
+                </div>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <a href="detailPage.html" class="btn">상세보기</a>
+              </li>
+              <li>
+                <div class="noti-tit">
+                  <p class="tit">웨어러블 캡스톤디자인</p>
+                </div>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <a href="detailPage.html" class="btn">상세보기</a>
+              </li>
+              <li>
+                <div class="noti-tit">
+                  <p class="tit">웨어러블 캡스톤디자인</p>
+                </div>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <a href="detailPage.html" class="btn">상세보기</a>
+              </li>
+              <li>
+                <div class="noti-tit">
+                  <p class="tit">웨어러블 캡스톤디자인</p>
+                </div>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <a href="detailPage.html" class="btn">상세보기</a>
+              </li>
+              <li>
+                <div class="noti-tit">
+                  <p class="tit">웨어러블 캡스톤디자인</p>
+                </div>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <a href="detailPage.html" class="btn">상세보기</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="paging-wrap" style="display: none;">
             <a class="btn prev"></a>
             <!--현재페이지에 on -->
             <a class="btn on">1</a>
