--- a/square01.html
+++ b/square01.html
@@ -65,75 +65,85 @@
             </div>
           </div>
 
+          <!--05.27추가-->
+          <div class="cnt-list-wrap">
+            <!--개설과목 없을 경우 empty-->
+            <div class="empty">
+              <p class="empty-txt">검색결과가 없습니다.</p>
+            </div>
 
-          <ul class="cnt-list">
-            <li class="list-head web">
-              <p>제목</p>
-              <p>등록일</p>
-            </li>
-            <li class="emergency">
-              <div class="noti-tit">
-                <span class="tag">공지</span>
-                <p class="tit">바이오헬스 혁신융합대학 사전평가/이수실적 통계</p>
-              </div>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <a href="detailPage.html" class="btn">상세보기</a>
-            </li>
-            <li>
-              <div class="noti-tit">
-                <span class="tag">공지</span>
-                <p class="tit">바이오헬스 혁신융합대학 사전평가/이수실적 통계</p>
-              </div>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <a href="detailPage.html" class="btn">상세보기</a>
-            </li>
-            <li>
-              <div class="noti-tit">
-                <span class="tag">공지</span>
-                <p class="tit">우송대학교 바이오헬스 실감미디어(VR/AR/MR) 교육실 홍보영상</p>
-              </div>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <a href="detailPage.html" class="btn">상세보기</a>
-            </li>
-            <li>
-              <div class="noti-tit">
-                <span class="tag">공지</span>
-                <p class="tit">2022 융합연구 공동학술대회 결과 공유</p>
-              </div>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <a href="detailPage.html" class="btn">상세보기</a>
-            </li>
-            <li>
-              <div class="noti-tit">
-                <p class="tit">2022년도 상반기 Design Your 커리어 어워즈</p>
-              </div>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <a href="detailPage.html" class="btn">상세보기</a>
-            </li>
-            <li>
-              <div class="noti-tit">
-                <p class="tit">2021년 디지털신기술 바이오헬스 혁신융합대학 우수성과사례</p>
-              </div>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <a href="detailPage.html" class="btn">상세보기</a>
-            </li>
-            <li>
-              <div class="noti-tit">
-                <p class="tit">2021년 디지털신기술 바이오헬스 혁신융합대학 우수성과사례</p>
-              </div>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <a href="detailPage.html" class="btn">상세보기</a>
-            </li>
-            <li>
-              <div class="noti-tit">
-                <p class="tit">2021년 디지털신기술 바이오헬스 혁신융합대학 우수성과사례</p>
-              </div>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <a href="detailPage.html" class="btn">상세보기</a>
-            </li>
-          </ul>
 
-          <div class="paging-wrap">
+
+
+            <ul class="cnt-list" style="display: none">
+              <li class="list-head web">
+                <p>제목</p>
+                <p>등록일</p>
+              </li>
+              <li class="emergency">
+                <div class="noti-tit">
+                  <span class="tag">공지</span>
+                  <p class="tit">바이오헬스 혁신융합대학 사전평가/이수실적 통계</p>
+                </div>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <a href="detailPage.html" class="btn">상세보기</a>
+              </li>
+              <li>
+                <div class="noti-tit">
+                  <span class="tag">공지</span>
+                  <p class="tit">바이오헬스 혁신융합대학 사전평가/이수실적 통계</p>
+                </div>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <a href="detailPage.html" class="btn">상세보기</a>
+              </li>
+              <li>
+                <div class="noti-tit">
+                  <span class="tag">공지</span>
+                  <p class="tit">우송대학교 바이오헬스 실감미디어(VR/AR/MR) 교육실 홍보영상</p>
+                </div>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <a href="detailPage.html" class="btn">상세보기</a>
+              </li>
+              <li>
+                <div class="noti-tit">
+                  <span class="tag">공지</span>
+                  <p class="tit">2022 융합연구 공동학술대회 결과 공유</p>
+                </div>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <a href="detailPage.html" class="btn">상세보기</a>
+              </li>
+              <li>
+                <div class="noti-tit">
+                  <p class="tit">2022년도 상반기 Design Your 커리어 어워즈</p>
+                </div>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <a href="detailPage.html" class="btn">상세보기</a>
+              </li>
+              <li>
+                <div class="noti-tit">
+                  <p class="tit">2021년 디지털신기술 바이오헬스 혁신융합대학 우수성과사례</p>
+                </div>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <a href="detailPage.html" class="btn">상세보기</a>
+              </li>
+              <li>
+                <div class="noti-tit">
+                  <p class="tit">2021년 디지털신기술 바이오헬스 혁신융합대학 우수성과사례</p>
+                </div>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <a href="detailPage.html" class="btn">상세보기</a>
+              </li>
+              <li>
+                <div class="noti-tit">
+                  <p class="tit">2021년 디지털신기술 바이오헬스 혁신융합대학 우수성과사례</p>
+                </div>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <a href="detailPage.html" class="btn">상세보기</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="paging-wrap" style="display: none;">
             <a class="btn prev"></a>
             <!--현재페이지에 on -->
             <a class="btn on">1</a>
