--- a/square02.html
+++ b/square02.html
@@ -66,52 +66,63 @@
           </div>
 
 
-          <ul class="cnt-list">
-            <li class="list-head web">
-              <p>제목</p>
-              <p>원문보기</p>
-              <p>발행처</p>
-              <p>등록일</p>
-            </li>
-            <li>
-              <p class="tit"><a href="detailPageOrigin.html">[2023.01.31] 네이버 웨일 스페이스, 단국대와 혁신융합대학사업 진행[2023.01.31] 네이버 웨일 스페이스, 단국대와 혁신융합대학사업 진행</a></p>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <p class="publisher">발행처일 <span>동아일보</span></p>
-              <a href="" class="origin">원문보기</a>
-            </li>
-            <li>
-              <p class="tit"><a href="detailPageOrigin.html">[2023.01.31] 네이버 웨일 스페이스, 단국대와 혁신융합대학사업 진행</a></p>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <p class="publisher">발행처일 <span>동아일보</span></p>
-              <a href="" class="origin">원문보기</a>
-            </li>
-            <li>
-              <p class="tit"><a href="detailPageOrigin.html">[2023.01.31] 네이버 웨일 스페이스, 단국대와 혁신융합대학사업 진행</a></p>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <p class="publisher">발행처일 <span>동아일보</span></p>
-              <a href="" class="origin">원문보기</a>
-            </li>
-            <li>
-              <p class="tit"><a href="detailPageOrigin.html">[2023.01.31] 네이버 웨일 스페이스, 단국대와 혁신융합대학사업 진행</a></p>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <p class="publisher">발행처일 <span>동아일보</span></p>
-              <a href="" class="origin">원문보기</a>
-            </li>
-            <li>
-              <p class="tit"><a href="detailPageOrigin.html">[2023.01.31] 네이버 웨일 스페이스, 단국대와 혁신융합대학사업 진행</a></p>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <p class="publisher">발행처일 <span>동아일보</span></p>
-              <a href="" class="origin">원문보기</a>
-            </li>
-            <li>
-              <p class="tit"><a href="detailPageOrigin.html">[2023.01.31] 네이버 웨일 스페이스, 단국대와 혁신융합대학사업 진행</a></p>
-              <p class="date">등록일 <span>2022-09-13</span></p>
-              <p class="publisher">발행처일 <span>동아일보</span></p>
-              <a href="" class="origin">원문보기</a>
-            </li>
-          </ul>
+          <!--05.27추가-->
+          <div class="cnt-list-wrap">
+            <!--개설과목 없을 경우 empty-->
+            <div class="empty">
+              <p class="empty-txt">작성된 게시글이 없습니다.</p>
+            </div>
 
-          <div class="paging-wrap">
+
+
+
+            <ul class="cnt-list" style="display: none">
+              <li class="list-head web">
+                <p>제목</p>
+                <p>원문보기</p>
+                <p>발행처</p>
+                <p>등록일</p>
+              </li>
+              <li>
+                <p class="tit"><a href="detailPageOrigin.html">[2023.01.31] 네이버 웨일 스페이스, 단국대와 혁신융합대학사업 진행[2023.01.31] 네이버 웨일 스페이스, 단국대와 혁신융합대학사업 진행</a></p>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <p class="publisher">발행처일 <span>동아일보</span></p>
+                <a href="" class="origin">원문보기</a>
+              </li>
+              <li>
+                <p class="tit"><a href="detailPageOrigin.html">[2023.01.31] 네이버 웨일 스페이스, 단국대와 혁신융합대학사업 진행</a></p>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <p class="publisher">발행처일 <span>동아일보</span></p>
+                <a href="" class="origin">원문보기</a>
+              </li>
+              <li>
+                <p class="tit"><a href="detailPageOrigin.html">[2023.01.31] 네이버 웨일 스페이스, 단국대와 혁신융합대학사업 진행</a></p>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <p class="publisher">발행처일 <span>동아일보</span></p>
+                <a href="" class="origin">원문보기</a>
+              </li>
+              <li>
+                <p class="tit"><a href="detailPageOrigin.html">[2023.01.31] 네이버 웨일 스페이스, 단국대와 혁신융합대학사업 진행</a></p>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <p class="publisher">발행처일 <span>동아일보</span></p>
+                <a href="" class="origin">원문보기</a>
+              </li>
+              <li>
+                <p class="tit"><a href="detailPageOrigin.html">[2023.01.31] 네이버 웨일 스페이스, 단국대와 혁신융합대학사업 진행</a></p>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <p class="publisher">발행처일 <span>동아일보</span></p>
+                <a href="" class="origin">원문보기</a>
+              </li>
+              <li>
+                <p class="tit"><a href="detailPageOrigin.html">[2023.01.31] 네이버 웨일 스페이스, 단국대와 혁신융합대학사업 진행</a></p>
+                <p class="date">등록일 <span>2022-09-13</span></p>
+                <p class="publisher">발행처일 <span>동아일보</span></p>
+                <a href="" class="origin">원문보기</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="paging-wrap" style="display: none">
             <a class="btn prev"></a>
             <!--현재페이지에 on -->
             <a class="btn on">1</a>
