--- a/outCome01.html
+++ b/outCome01.html
@@ -55,7 +55,20 @@
             <h3>우수성과</h3>
           </div>
 
-          <ul class="review-list">
+
+
+          <!--05.27추가-->
+          <!--개설과목 없을 경우 empty-->
+          <div class="empty">
+            <p class="empty-txt">작성된 게시글이 없습니다.</p>
+          </div>
+          <!--05.27추가-->
+
+
+
+
+
+          <ul class="review-list" style="display: none">
             <!--open 클래스 추가시 내용 노출됨-->
             <li class="open">
               <a class="btn">취창업 성공 후기</a>
@@ -66,7 +79,7 @@
             </li>
           </ul>
 
-          <div class="paging-wrap">
+          <div class="paging-wrap" style="display: none;">
             <a class="btn prev"></a>
             <!--현재페이지에 on -->
             <a class="btn on">1</a>
