--- a/intro01.html
+++ b/intro01.html
@@ -776,6 +776,17 @@
 <script src="js/header.js"></script>
 <script src="js/footer.js"></script>
 <script src="js/initMotion.js"></script><!--화면에 element 진입 감시역할-->
+
+
+
+
+
+<!--05.28 추가-->
+<script src="js/popup.js"></script>
+<!--05.28 추가-->
+
+
+
 <script>
   if(window.innerWidth <= 1080) {
     var graph = new Swiper(".graph", {
@@ -832,10 +843,19 @@
   let popupClose = document.querySelector('.popup .close');
   let popupInner = document.querySelector('.popup .inner');
 
+
+
+
+  //05.28수정
   function popupOpen(v) {
     popup.classList.add('open');
     popupInner.classList.add(v);
+    popupPos(v)
   }
+  //05.28수정
+
+
+
   popupClose.addEventListener('click', function() {
     popup.classList.remove('open');
     popupInner.className = 'inner';
