--- a/intro04.html
+++ b/intro04.html
@@ -647,6 +647,19 @@
 <script src="js/swiper-bundle.min.js"></script>
 <script src="js/header.js"></script>
 <script src="js/footer.js"></script>
+
+
+
+
+
+
+<!--05.28 추가-->
+<script src="js/popup.js"></script>
+<!--05.28 추가-->
+
+
+
+
 <script>
   let dataWrap = document.querySelector('.data-wrap');
   let selectBtns = document.querySelectorAll('.select-menu .btn');
@@ -724,10 +737,19 @@
     }
   }
 
+
+
+  //05.28수정
   function popupOpen(v) {
     popup.classList.add('open');
     popupInner.classList.add(v);
+    popupPos(v)
   }
+  //05.28수정
+
+
+
+
   popupClose.addEventListener('click', function() {
     popup.classList.remove('open');
     popupInner.className = 'inner';
